# open_ai_chat

./: Pipfile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  dependabot.yml
open_ai_chat/: __init__.py  chat.py  cli.py  message.py  token.py
tests/: __init__.py  test_e2e.py  test_message.py
